--- a/app/views/listings/_listing_form.html.erb
+++ b/app/views/listings/_listing_form.html.erb
@@ -5,8 +5,8 @@
 	<%= f.label :description %>
 	<%= f.text_area :description %>
 	<br><br>
-	<%= f.label :room %>
-	<%= f.number_field :room %>
+	<%= f.label :rooms %>
+	<%= f.number_field :rooms %>
 	<br><br>
 	<%= f.label :capacity %>
 	<%= f.number_field :capacity %>
