--- a/app/views/listings/_listing_form.html.erb
+++ b/app/views/listings/_listing_form.html.erb
@@ -26,6 +26,6 @@
 	<% if @listing.new_record? %>
 		<%= f.submit 'Create Listing' %>
 	<% else %>
-		<%=	f.submit 'Edit Listing' %>
+		<%=	f.submit 'Update Listing' %>
 	<% end %>
 <% end %>
