--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= current_user.email %>
         <div>
         <%= link_to 'Your Listings', listings_path %><br>
+        <%= link_to 'Your Bookings', bookings_path %><br>
         <%= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete} %>
         </div>
       <% else %>
