--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,8 +9,8 @@
 <p>Availabilty: <%= @listing.availability %></p>
 
 <% if current_user.id == @listing.user.id %>
-	<%= link_to 'Edit Listing', edit_listing_path %>
-	<%= link_to 'Delete Listing', listing_path, data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+	<%= link_to 'Edit Listing', edit_listing_path(@listing) %>
+	<%= link_to 'Delete Listing', listing_path(@listing), data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
 <% else %>
-	<p>Make Booking</p>
+	<%= link_to 'Make Booking', new_booking_path(listing_id: @listing.id) %>
 <% end %>
