--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,15 @@
     <nav class="navbar p-2" style="box-shadow: 0px 0.5px;">
       <%= link_to image_tag('logo.png', height: 50), root_path %>
       <% if user_signed_in? %>
-        <%= current_user.email %>
-        <div>
-        <%= link_to 'Your Listings', listings_path %><br>
-        <%= link_to 'Your Bookings', bookings_path %><br>
-        <%= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete} %>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= current_user.email %>
+          </button>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Your Listings', listings_path %></li>
+            <li><%= link_to 'Your Bookings', bookings_path %></li>
+            <li><%= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete} %></li>
+          </ul>
         </div>
       <% else %>
         <%= link_to 'Sign In', new_user_session_path %>
@@ -29,3 +33,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+
