--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,7 @@
 <h1>All Listings</h1>
 
 <%= form_tag(root_path, method: :get) do %>
-	<%= text_field_tag :location, params[:location] %>
-	<%= submit_tag 'Search' %>
-<% end %>
-
-<%= form_tag(root_path, method: :get) do %>
+	<%= text_field_tag :location, params[:location], placeholder: 'Enter location' %>
 	<%= date_field_tag :check_in, params[:check_in] %>
 	<%= date_field_tag :check_out, params[:check_out] %>
 	<%= submit_tag 'Search' %>
