--- a/app/views/listings/_listing_form.html.erb
+++ b/app/views/listings/_listing_form.html.erb
@@ -23,6 +23,8 @@
 	<%= f.label :location %>
 	<%= f.text_field :location %>
 	<br><br>
+	<%= f.label :photos %>
+	<%= f.file_field :photos, multiple: true %>	
 	<% if @listing.new_record? %>
 		<%= f.submit 'Create Listing' %>
 	<% else %>
